<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_MC_Status" Id="{54b2eb15-b156-41a8-bf4f-85ccaaec4e74}">
    <Declaration><![CDATA[TYPE ST_MC_Status :
STRUCT
	Status 		: BOOL;
	Done   		: BOOL;
	Busy   		: BOOL;
	Error  		: BOOL;
	Active 		: BOOL;
	CadAborted	: BOOL;
	InVelocity	: BOOL;
	ErrorID		: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>